--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["Martynas Pumputis <martynasp@gmail.com>"]
 
 [dependencies]
-mio = "0.6"
+mio = "0.6.14"
 bytes = "0.4"
+deque = "0.3"
 tcph = { path = "tcph" }
 workers = { path = "workers" }
+
 
 [workspace]
